Trying to fix quiz on mobile

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1175,9 +1175,7 @@ pre {
   text-align: center;
   margin-bottom: 30px;
   z-index: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  height: 500px;
 }
 
 .answers {
